package model;

public enum ModelElement {
  FIREFIGHTER, FIRE , CLOUD , MOUNTAIN , ROAD, MOTORIZED_FIREFIGHTER, ROCK,
}
