package model;

public enum TerrainType {
    PLAIN , MOUNTAIN, ROAD, ROCK
}
