@startuml

package util {
  class Position {
    + row : int
    + column : int
  }

  interface MovementStrategy {
    + nextPosition(current : Position,
                   firePositions,
                   neighbors,
                   terrainPolicy) : Position
  }

  class TargetStrategy implements MovementStrategy
}

package model {

  enum ModelElement {
    FIREFIGHTER
    FIRE
    CLOUD
    MOUNTAIN
    ROAD
    MOTORIZED_FIREFIGHTER
    ROCK
  }

  enum TerrainType {
    PLAIN
    MOUNTAIN
    ROAD
    ROCK
  }

  interface Actor {
    + getPosition() : Position
    + setPosition(position : Position) : void
    + getModelElement() : ModelElement
    + act(fire : Fire,
          neighbors,
          terrainPolicy : TerrainPolicy) : List
  }

  interface Board {
    + stateAt(position : Position)
    + width() : int
    + height() : int
    + step() : void
    + reset() : void
    + stepNumber() : int
  }

  interface TerrainPolicy {
    + terrainAt(position : Position) : TerrainType
    + canFirefighterMoveTo(position : Position, motorized : boolean) : boolean
    + canCloudMoveTo(position : Position) : boolean
    + fireSpreadPeriodFor(position : Position) : int
  }

  class DefaultTerrainPolicy implements TerrainPolicy {
    - terrainGrid : TerrainType[][]
  }

  class Fire {
    - firePositions : Set
    + Fire(initialPositions : Set)
    + getFirePositions() : Set
    + isOnFire(position : Position) : boolean
    + extinguish(position : Position) : void
    + spread(step : int,
             neighbors,
             terrainPolicy : TerrainPolicy) : List
  }

  abstract class AbstractFirefighter implements Actor {
    # position : Position
    # movementStrategy : MovementStrategy
    {abstract} # stepsPerTurn() : int
  }

  class Firefighter extends AbstractFirefighter
  class MotorizedFirefighter extends AbstractFirefighter

  class Cloud implements Actor {
    - position : Position
    - random : Random
  }

  class FirefighterBoard implements Board {
    - columnCount : int
    - rowCount : int
    - initialFireCount : int
    - initialFirefighterCount : int
    - initialCloudCount : int
    - motorizedRatio : double
    - initialMountainCount : int
    - initialRockyCount : int

    - positions : Position[][]
    - neighbors
    - random : Random
    - step : int

    - terrainGrid : TerrainType[][]
    - terrainPolicy : TerrainPolicy

    - fire : Fire
    - firefighters : List
    - clouds : List
  }

}

' Relations
Actor <|.. AbstractFirefighter
Actor <|.. Cloud

AbstractFirefighter <|-- Firefighter
AbstractFirefighter <|-- MotorizedFirefighter

Board <|.. FirefighterBoard

TerrainPolicy <|.. DefaultTerrainPolicy
MovementStrategy <|.. TargetStrategy

FirefighterBoard --> Fire
FirefighterBoard --> AbstractFirefighter
FirefighterBoard --> Cloud
FirefighterBoard --> Position
FirefighterBoard --> TerrainPolicy
FirefighterBoard --> TerrainType
FirefighterBoard --> ModelElement

Fire --> Position
DefaultTerrainPolicy --> TerrainType
DefaultTerrainPolicy --> Position

AbstractFirefighter --> MovementStrategy
AbstractFirefighter --> Position

Cloud --> Position

TargetStrategy --> Position
TargetStrategy --> TerrainPolicy
@enduml
